--- a/config/database.yml
+++ b/config/database.yml
@@ -79,6 +79,4 @@ test:
 #
 production:
   <<: *default
-  database: om30_municipes_app_production
-  username: om30_municipes_app
-  password: <%= ENV["OM30_MUNICIPES_APP_DATABASE_PASSWORD"] %>
+  url: <%= ENV['DATABASE_URL'] %>
